--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_native_splash: ^2.2.17
+  image_picker: ^0.8.6+1
+  path: ^1.8.2
+  firebase_core: ^2.6.1
+  cloud_firestore: ^4.4.2
+  firebase_storage: ^11.0.13
+  
 
 dev_dependencies:
   flutter_test:
