--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^2.6.1
   cloud_firestore: ^4.4.2
   firebase_storage: ^11.0.13
+  flutter_slidable: ^2.0.0
+  rflutter_alert: ^2.0.4
   
 
 dev_dependencies:
