--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_storage: ^11.0.13
   flutter_slidable: ^2.0.0
   rflutter_alert: ^2.0.4
+  google_fonts: ^4.0.3
+  intl: ^0.18.0
   
 
 dev_dependencies:
